Add complete mobile version with touch controls

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,13 @@
     <div class="score">Очков: <span id="score">0</span></div>
   </div>
 </div>
-<!-- Canvas будет создан автоматически через JavaScript -->
+
+<!-- Кнопки управления для мобильных -->
+<div class="mobile-controls">
+  <button class="mobile-btn btn-up" id="btnUp">↑</button>
+  <button class="mobile-btn btn-left" id="btnLeft">←</button>
+  <button class="mobile-btn btn-right" id="btnRight">→</button>
+  <button class="mobile-btn btn-down" id="btnDown">↓</button>
+</div>
 </body>
 </html>
